@@ -1,3 +1,15 @@
+2019-07-08 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
+
+	* sim/ucsim/pdk.src/inst.cc:
+	  Remove pdk13 simulator support for cneqsn (towards fixing bug #2923).
+	* sdas/aspdk13/pdk13pst.c,
+	  sdas/aspdk13/pdk13mch.c:
+	  Remove pdk13 assembler support for cneqsn (towards fixing bug #2923).
+	* src/pdk/main.c:
+	  Rewrite initalization code without cneqsn (towards fixing bug #2923).
+	* src/pdk/gen.c:
+	  Remove use of cneqsn in some comparisons (towards fixing bug #2923).
+
 2019-06-30 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/gen.c,
